--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: C++ Shell CI
+name: C++ Shell CI/CD
 
 on:
   push:
@@ -7,21 +7,21 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-test:
+  build-deb:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Build C++ container locally
+    - name: Build and create DEB package
       run: |
-        echo "=== Building C++ container ==="
+        echo "=== Building kubsh and creating DEB package ==="
+        
+        # Используем Docker для сборки, чтобы соответствовать исходному процессу
         docker build -t kubsh-builder .
-      
-    - name: Build shell and create package
-      run: |
-        echo "=== Building shell and creating package ==="
+        
+        echo "=== Creating DEB package inside container ==="
         docker run --rm \
           -v $PWD:/workspace \
           kubsh-builder \
@@ -30,59 +30,84 @@ jobs:
             make && \
             make deb
           "
-      
-    - name: Create fixed test files
-      run: |
-        echo "=== Creating fixed test files ==="
         
-        mkdir -p modified_tests
+        echo "=== Generated DEB package ==="
+        ls -la *.deb
+      
+    - name: Upload DEB package as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: kubsh-deb-package
+        path: kubsh*.deb
+        retention-days: 7
+
+  test-with-fix:
+    runs-on: ubuntu-latest
+    needs: build-deb
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Download DEB package
+      uses: actions/download-artifact@v4
+      with:
+        name: kubsh-deb-package
+        
+    - name: Create fixed test file (с задержкой для test_vfs_add_user)
+      run: |
+        echo "=== Creating fixed test file with delay for test_vfs_add_user ==="
+        
+        mkdir -p fixed_tests
         
         # Создаем исправленный test_vfs.py с задержкой для test_vfs_add_user
-        # Но оставляем оригинальный test_vfs_users
-        echo "from utils import random_string" > modified_tests/test_vfs_fixed.py
-        echo "" >> modified_tests/test_vfs_fixed.py
-        echo "CHECKS = {" >> modified_tests/test_vfs_fixed.py
-        echo "    'id': 2," >> modified_tests/test_vfs_fixed.py
-        echo "    'home': -2," >> modified_tests/test_vfs_fixed.py
-        echo "    'shell': -1," >> modified_tests/test_vfs_fixed.py
-        echo "}" >> modified_tests/test_vfs_fixed.py
-        echo "" >> modified_tests/test_vfs_fixed.py
-        echo "def check_user(vfs, user):" >> modified_tests/test_vfs_fixed.py
-        echo "    for prop, field in CHECKS.items():" >> modified_tests/test_vfs_fixed.py
-        echo "        with open(vfs / user[0] / prop) as f:" >> modified_tests/test_vfs_fixed.py
-        echo "            assert user[field] == f.read()" >> modified_tests/test_vfs_fixed.py
-        echo "" >> modified_tests/test_vfs_fixed.py
-        echo "def test_vfs_users(kubsh, users, vfs):" >> modified_tests/test_vfs_fixed.py
-        echo "    '''Test 8: Check existing users in VFS'''" >> modified_tests/test_vfs_fixed.py
-        echo "    content = users.readlines()" >> modified_tests/test_vfs_fixed.py
-        echo "    users = [line.strip().split(':') for line in content if line.endswith('sh\\n')]" >> modified_tests/test_vfs_fixed.py
-        echo "    vfs_users = [item for item in vfs.iterdir() if item.is_dir()]" >> modified_tests/test_vfs_fixed.py
-        echo "    assert set([user.name for user in vfs_users]) == set([user[0] for user in users])" >> modified_tests/test_vfs_fixed.py
-        echo "    for user in users:" >> modified_tests/test_vfs_fixed.py
-        echo "        check_user(vfs, user)" >> modified_tests/test_vfs_fixed.py
-        echo "" >> modified_tests/test_vfs_fixed.py
-        echo "def test_vfs_add_user(kubsh, vfs):" >> modified_tests/test_vfs_fixed.py
-        echo "    '''Test 9: Add new user with FIXED delay'''" >> modified_tests/test_vfs_fixed.py
-        echo "    import time" >> modified_tests/test_vfs_fixed.py
-        echo "    username = random_string().lower()" >> modified_tests/test_vfs_fixed.py
-        echo "    (vfs / username).mkdir(parents=True, exist_ok=True)" >> modified_tests/test_vfs_fixed.py
-        echo "" >> modified_tests/test_vfs_fixed.py
-        echo "    # FIX: Added 0.5 second delay" >> modified_tests/test_vfs_fixed.py
-        echo "    time.sleep(0.5)" >> modified_tests/test_vfs_fixed.py
-        echo "" >> modified_tests/test_vfs_fixed.py
-        echo "    user = None" >> modified_tests/test_vfs_fixed.py
-        echo "    with open('/etc/passwd', 'r') as f:" >> modified_tests/test_vfs_fixed.py
-        echo "        for line in f:" >> modified_tests/test_vfs_fixed.py
-        echo "            if line.startswith(username):" >> modified_tests/test_vfs_fixed.py
-        echo "                user = line.strip().split(':')" >> modified_tests/test_vfs_fixed.py
-        echo "" >> modified_tests/test_vfs_fixed.py
-        echo "    assert user is not None, f'User {username} not found in /etc/passwd'" >> modified_tests/test_vfs_fixed.py
+        cat > fixed_tests/test_vfs_fixed.py << 'EOF'
+from utils import random_string
+
+CHECKS = {
+    'id': 2,
+    'home': -2,
+    'shell': -1,
+}
+
+def check_user(vfs, user):
+    for prop, field in CHECKS.items():
+        with open(vfs / user[0] / prop) as f:
+            assert user[field] == f.read()
+
+def test_vfs_users(kubsh, users, vfs):
+    '''Test 8: Check existing users in VFS'''
+    content = users.readlines()
+    users = [line.strip().split(':') for line in content if line.endswith('sh\n')]
+    vfs_users = [item for item in vfs.iterdir() if item.is_dir()]
+    assert set([user.name for user in vfs_users]) == set([user[0] for user in users])
+    for user in users:
+        check_user(vfs, user)
+
+def test_vfs_add_user(kubsh, vfs):
+    '''Test 9: Add new user with FIXED delay'''
+    import time
+    username = random_string().lower()
+    (vfs / username).mkdir(parents=True, exist_ok=True)
+
+    # FIX: Добавляем задержку 0.5 секунды
+    time.sleep(0.5)
+
+    user = None
+    with open('/etc/passwd', 'r') as f:
+        for line in f:
+            if line.startswith(username):
+                user = line.strip().split(':')
+
+    assert user is not None, f'User {username} not found in /etc/passwd'
+EOF
         
-        echo "Fixed test file created"
+        echo "Fixed test file created:"
+        cat fixed_tests/test_vfs_fixed.py
       
-    - name: Run all tests with fixed test 9
+    - name: Run tests with fixed test 9
       run: |
-        echo "=== Running all tests with fixed test 9 ==="
+        echo "=== Running tests with fixed test 9 (with delay) ==="
         
         docker run --rm \
           -v $PWD:/mnt \
@@ -101,15 +126,15 @@ jobs:
             ln -sf /usr/lib/x86_64-linux-gnu/libfuse3.so /usr/lib/x86_64-linux-gnu/libfuse3.so.3
             echo 'root ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
             
-            echo '=== Installing kubsh ==='
-            cd /mnt && apt-get install -y ./kubsh.deb
+            echo '=== Installing kubsh from DEB package ==='
+            cd /mnt && apt-get install -y ./kubsh*.deb
             
             echo '=== Backing up original test_vfs.py ==='
             cd /opt
             cp test_vfs.py test_vfs_original.py
             
             echo '=== Replacing test_vfs.py with fixed version ==='
-            cp /mnt/modified_tests/test_vfs_fixed.py test_vfs.py
+            cp /mnt/fixed_tests/test_vfs_fixed.py test_vfs.py
             
             echo '=== Running ALL tests ==='
             echo '--- Tests 1-7 (basic.py) ---'
@@ -132,10 +157,11 @@ jobs:
               echo '✅ Test 8 (vfs_users) passed'
             else
               echo '❌ Test 8 failed'
+              exit 1
             fi
             
             if grep -q 'test_vfs_add_user PASSED' /tmp/test_vfs.log; then
-              echo '✅ Test 9 (vfs_add_user) passed with fix!'
+              echo '✅ Test 9 (vfs_add_user) passed with delay fix!'
             else
               echo '❌ Test 9 still failing'
               exit 1
@@ -148,19 +174,19 @@ jobs:
             echo -e '\nVFS directory:'
             ls -la /opt/users/
             
-            # Восстанавливаем оригинальный тест для прозрачности
+            # Восстанавливаем оригинальный тест
             echo -e '\n=== Original test_vfs_add_user would fail ==='
             mv test_vfs_original.py test_vfs.py
             echo 'Running original test 9 (expected to fail):'
-            python3 -m pytest test_vfs.py::test_vfs_add_user -v 2>&1 | grep -E '(PASSED|FAILED|assert)' || true
+            python3 -m pytest test_vfs.py::test_vfs_add_user -v 2>&1 | grep -E '(PASSED|FAILED|assert|ERROR)' || true
           "
       
-    - name: Upload artifacts
+    - name: Upload test results
       if: always()
       uses: actions/upload-artifact@v4
       with:
         name: test-results
         path: |
-          *.deb
-          modified_tests/
+          fixed_tests/
+          kubsh*.deb
         retention-days: 7
