--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         echo "=== Building kubsh and creating DEB package ==="
         
-        # Используем Docker для сборки, чтобы соответствовать исходному процессу
+        # Используем Docker для сборки
         docker build -t kubsh-builder .
         
         echo "=== Creating DEB package inside container ==="
@@ -54,55 +54,53 @@ jobs:
       with:
         name: kubsh-deb-package
         
-    - name: Create fixed test file (с задержкой для test_vfs_add_user)
+    - name: Create fixed test file using echo
       run: |
-        echo "=== Creating fixed test file with delay for test_vfs_add_user ==="
+        echo "=== Creating fixed test file with echo commands ==="
         
         mkdir -p fixed_tests
         
-        # Создаем исправленный test_vfs.py с задержкой для test_vfs_add_user
-        cat > fixed_tests/test_vfs_fixed.py << 'EOF'
-from utils import random_string
-
-CHECKS = {
-    'id': 2,
-    'home': -2,
-    'shell': -1,
-}
-
-def check_user(vfs, user):
-    for prop, field in CHECKS.items():
-        with open(vfs / user[0] / prop) as f:
-            assert user[field] == f.read()
-
-def test_vfs_users(kubsh, users, vfs):
-    '''Test 8: Check existing users in VFS'''
-    content = users.readlines()
-    users = [line.strip().split(':') for line in content if line.endswith('sh\n')]
-    vfs_users = [item for item in vfs.iterdir() if item.is_dir()]
-    assert set([user.name for user in vfs_users]) == set([user[0] for user in users])
-    for user in users:
-        check_user(vfs, user)
-
-def test_vfs_add_user(kubsh, vfs):
-    '''Test 9: Add new user with FIXED delay'''
-    import time
-    username = random_string().lower()
-    (vfs / username).mkdir(parents=True, exist_ok=True)
-
-    # FIX: Добавляем задержку 0.5 секунды
-    time.sleep(0.5)
-
-    user = None
-    with open('/etc/passwd', 'r') as f:
-        for line in f:
-            if line.startswith(username):
-                user = line.strip().split(':')
-
-    assert user is not None, f'User {username} not found in /etc/passwd'
-EOF
+        # Создаем исправленный test_vfs.py через echo
+        echo "from utils import random_string" > fixed_tests/test_vfs_fixed.py
+        echo "" >> fixed_tests/test_vfs_fixed.py
+        echo "CHECKS = {" >> fixed_tests/test_vfs_fixed.py
+        echo "    'id': 2," >> fixed_tests/test_vfs_fixed.py
+        echo "    'home': -2," >> fixed_tests/test_vfs_fixed.py
+        echo "    'shell': -1," >> fixed_tests/test_vfs_fixed.py
+        echo "}" >> fixed_tests/test_vfs_fixed.py
+        echo "" >> fixed_tests/test_vfs_fixed.py
+        echo "def check_user(vfs, user):" >> fixed_tests/test_vfs_fixed.py
+        echo "    for prop, field in CHECKS.items():" >> fixed_tests/test_vfs_fixed.py
+        echo "        with open(vfs / user[0] / prop) as f:" >> fixed_tests/test_vfs_fixed.py
+        echo "            assert user[field] == f.read()" >> fixed_tests/test_vfs_fixed.py
+        echo "" >> fixed_tests/test_vfs_fixed.py
+        echo "def test_vfs_users(kubsh, users, vfs):" >> fixed_tests/test_vfs_fixed.py
+        echo "    '''Test 8: Check existing users in VFS'''" >> fixed_tests/test_vfs_fixed.py
+        echo "    content = users.readlines()" >> fixed_tests/test_vfs_fixed.py
+        echo "    users = [line.strip().split(':') for line in content if line.endswith('sh\\n')]" >> fixed_tests/test_vfs_fixed.py
+        echo "    vfs_users = [item for item in vfs.iterdir() if item.is_dir()]" >> fixed_tests/test_vfs_fixed.py
+        echo "    assert set([user.name for user in vfs_users]) == set([user[0] for user in users])" >> fixed_tests/test_vfs_fixed.py
+        echo "    for user in users:" >> fixed_tests/test_vfs_fixed.py
+        echo "        check_user(vfs, user)" >> fixed_tests/test_vfs_fixed.py
+        echo "" >> fixed_tests/test_vfs_fixed.py
+        echo "def test_vfs_add_user(kubsh, vfs):" >> fixed_tests/test_vfs_fixed.py
+        echo "    '''Test 9: Add new user with FIXED delay'''" >> fixed_tests/test_vfs_fixed.py
+        echo "    import time" >> fixed_tests/test_vfs_fixed.py
+        echo "    username = random_string().lower()" >> fixed_tests/test_vfs_fixed.py
+        echo "    (vfs / username).mkdir(parents=True, exist_ok=True)" >> fixed_tests/test_vfs_fixed.py
+        echo "" >> fixed_tests/test_vfs_fixed.py
+        echo "    # FIX: Added 0.5 second delay" >> fixed_tests/test_vfs_fixed.py
+        echo "    time.sleep(0.5)" >> fixed_tests/test_vfs_fixed.py
+        echo "" >> fixed_tests/test_vfs_fixed.py
+        echo "    user = None" >> fixed_tests/test_vfs_fixed.py
+        echo "    with open('/etc/passwd', 'r') as f:" >> fixed_tests/test_vfs_fixed.py
+        echo "        for line in f:" >> fixed_tests/test_vfs_fixed.py
+        echo "            if line.startswith(username):" >> fixed_tests/test_vfs_fixed.py
+        echo "                user = line.strip().split(':')" >> fixed_tests/test_vfs_fixed.py
+        echo "" >> fixed_tests/test_vfs_fixed.py
+        echo "    assert user is not None, f'User {username} not found in /etc/passwd'" >> fixed_tests/test_vfs_fixed.py
         
-        echo "Fixed test file created:"
+        echo "=== Fixed test file content ==="
         cat fixed_tests/test_vfs_fixed.py
       
     - name: Run tests with fixed test 9
