--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: C++ Shell CI/CD
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - 'v*'  # Запускать на тегах v1.0, v1.1 и т.д.
   pull_request:
     branches: [ "main" ]
 
@@ -13,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Получить всю историю для тегов
       
     - name: Build and create DEB package
       run: |
@@ -34,11 +38,19 @@ jobs:
         echo "=== Generated DEB package ==="
         ls -la *.deb
         
-        # Сохраняем имя пакета для релиза
+        # Сохраняем имя пакета
         DEB_FILE=$(ls kubsh*.deb)
         echo "DEB_FILE=$DEB_FILE" >> $GITHUB_ENV
+        
+        # Читаем версию из Makefile или создаем
+        if [ -f Makefile ]; then
+          VERSION=$(grep -i '^version' Makefile | head -1 | awk -F= '{print $2}' | tr -d '[:space:]' || echo "1.0.0")
+        else
+          VERSION="1.0.0"
+        fi
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
       
-    - name: Upload DEB package for release
+    - name: Upload DEB package
       uses: actions/upload-artifact@v4
       with:
         name: kubsh-deb-package
@@ -184,9 +196,11 @@ jobs:
           "
 
   create-release:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     needs: [build-deb, test-with-fix]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Необходимо для создания релиза
     
     steps:
     - name: Checkout code
