--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0  # Получить всю историю для тегов
       
     - name: Build and create DEB package
       run: |
@@ -37,20 +35,8 @@ jobs:
         
         echo "=== Generated DEB package ==="
         ls -la *.deb
-        
-        # Сохраняем имя пакета
-        DEB_FILE=$(ls kubsh*.deb)
-        echo "DEB_FILE=$DEB_FILE" >> $GITHUB_ENV
-        
-        # Читаем версию из Makefile или создаем
-        if [ -f Makefile ]; then
-          VERSION=$(grep -i '^version' Makefile | head -1 | awk -F= '{print $2}' | tr -d '[:space:]' || echo "1.0.0")
-        else
-          VERSION="1.0.0"
-        fi
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
       
-    - name: Upload DEB package
+    - name: Upload DEB package as artifact
       uses: actions/upload-artifact@v4
       with:
         name: kubsh-deb-package
@@ -196,11 +182,13 @@ jobs:
           "
 
   create-release:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-    needs: [build-deb, test-with-fix]
     runs-on: ubuntu-latest
+    needs: [build-deb, test-with-fix]
+    
+    # Запускать только при пуше в main (не при PR) ИЛИ при создании тега
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
     permissions:
-      contents: write  # Необходимо для создания релиза
+      contents: write
     
     steps:
     - name: Checkout code
@@ -211,11 +199,36 @@ jobs:
       with:
         name: kubsh-deb-package
         
+    - name: Get version
+      id: get_version
+      run: |
+        # Пытаемся получить версию из тега, иначе из Makefile, иначе дата
+        if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+          VERSION="${GITHUB_REF#refs/tags/}"
+        elif [ -f Makefile ]; then
+          VERSION=$(grep -i '^VERSION' Makefile | head -1 | awk -F= '{print $2}' | tr -d '[:space:]' || echo "1.0.0")
+        else
+          VERSION="1.0.0-$(date +%Y%m%d)"
+        fi
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
+        tag_name: v${{ steps.get_version.outputs.version }}
+        name: Release v${{ steps.get_version.outputs.version }}
+        body: |
+          ## kubsh Shell v${{ steps.get_version.outputs.version }}
+          
+          DEB package for kubsh shell
+          
+          ### Installation
+          ```bash
+          sudo dpkg -i kubsh*.deb
+          sudo apt-get install -f  # Install dependencies if needed
+          ```
         files: kubsh*.deb
-        generate_release_notes: true
         draft: false
         prerelease: false
       env:
