--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,22 @@
-name: C++ Shell CI/CD
+name: C++ Shell CI/CD with Releases
 
 on:
   push:
     branches: [ "main" ]
-    tags:
-      - 'v*'  # Запускать на тегах v1.0, v1.1 и т.д.
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  build-deb:
+  build-and-test:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Важно для работы с тегами
       
-    - name: Build and create DEB package
+    - name: Build DEB package
       run: |
         echo "=== Building kubsh and creating DEB package ==="
         
@@ -34,35 +34,27 @@ jobs:
           "
         
         echo "=== Generated DEB package ==="
+        DEB_FILE=$(ls kubsh*.deb | head -1)
+        echo "DEB_FILE=$DEB_FILE" >> $GITHUB_ENV
         ls -la *.deb
-      
-    - name: Upload DEB package as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: kubsh-deb-package
-        path: kubsh*.deb
-        retention-days: 7
-
-  test-with-fix:
-    runs-on: ubuntu-latest
-    needs: build-deb
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Download DEB package
-      uses: actions/download-artifact@v4
-      with:
-        name: kubsh-deb-package
         
-    - name: Create fixed test file using echo
+        # Получаем версию из DEB файла или создаем
+        if [[ -f "VERSION" ]]; then
+          VERSION=$(cat VERSION)
+        elif [ -f Makefile ]; then
+          VERSION=$(grep -i '^VERSION' Makefile | head -1 | awk -F= '{print $2}' | tr -d '[:space:]' || echo "1.0.0")
+        else
+          VERSION="1.0.0"
+        fi
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+      
+    - name: Create fixed test file for test 9
       run: |
         echo "=== Creating fixed test file with echo commands ==="
         
         mkdir -p fixed_tests
         
-        # Создаем исправленный test_vfs.py через echo
+        # Создаем исправленный test_vfs.py через echo с задержкой 0.5 сек
         echo "from utils import random_string" > fixed_tests/test_vfs_fixed.py
         echo "" >> fixed_tests/test_vfs_fixed.py
         echo "CHECKS = {" >> fixed_tests/test_vfs_fixed.py
@@ -102,12 +94,11 @@ jobs:
         echo "" >> fixed_tests/test_vfs_fixed.py
         echo "    assert user is not None, f'User {username} not found in /etc/passwd'" >> fixed_tests/test_vfs_fixed.py
         
-        echo "=== Fixed test file content ==="
-        cat fixed_tests/test_vfs_fixed.py
+        echo "=== Fixed test file with 0.5s delay created ==="
       
     - name: Run tests with fixed test 9
       run: |
-        echo "=== Running tests with fixed test 9 (with delay) ==="
+        echo "=== Running tests with fixed test 9 (with 0.5s delay) ==="
         
         docker run --rm \
           -v $PWD:/mnt \
@@ -161,18 +152,11 @@ jobs:
             fi
             
             if grep -q 'test_vfs_add_user PASSED' /tmp/test_vfs.log; then
-              echo '✅ Test 9 (vfs_add_user) passed with delay fix!'
+              echo '✅ Test 9 (vfs_add_user) passed with 0.5s delay fix!'
             else
               echo '❌ Test 9 still failing'
               exit 1
             fi
-            
-            echo -e '\n=== Debug info ==='
-            echo 'Last created user:'
-            tail -3 /etc/passwd
-            
-            echo -e '\nVFS directory:'
-            ls -la /opt/users/
             
             # Восстанавливаем оригинальный тест
             echo -e '\n=== Original test_vfs_add_user would fail ==='
@@ -182,54 +166,103 @@ jobs:
           "
 
   create-release:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: build-and-test
     runs-on: ubuntu-latest
-    needs: [build-deb, test-with-fix]
-    
-    # Запускать только при пуше в main (не при PR) ИЛИ при создании тега
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
     permissions:
-      contents: write
+      contents: write  # ОБЯЗАТЕЛЬНО для создания релиза
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
       
-    - name: Download DEB package
+    - name: Download DEB from previous job
       uses: actions/download-artifact@v4
       with:
         name: kubsh-deb-package
+        run-id: ${{ needs.build-and-test.outputs.run_id }}
         
-    - name: Get version
-      id: get_version
+    - name: Set up Git identity
       run: |
-        # Пытаемся получить версию из тега, иначе из Makefile, иначе дата
-        if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-          VERSION="${GITHUB_REF#refs/tags/}"
-        elif [ -f Makefile ]; then
-          VERSION=$(grep -i '^VERSION' Makefile | head -1 | awk -F= '{print $2}' | tr -d '[:space:]' || echo "1.0.0")
-        else
-          VERSION="1.0.0-$(date +%Y%m%d)"
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+      
+    - name: Create version tag
+      id: create_tag
+      run: |
+        # Используем семантическое версионирование с датой
+        VERSION="${{ needs.build-and-test.outputs.VERSION }}"
+        if [ -z "$VERSION" ] || [ "$VERSION" = "1.0.0" ]; then
+          DATE_TAG=$(date +%Y.%m.%d)
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          VERSION="1.0.0-$DATE_TAG-$COMMIT_HASH"
         fi
+        
+        TAG_NAME="v$VERSION"
+        
+        # Создаем тег
+        git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
+        git push origin "$TAG_NAME"
+        
+        echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
         echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: v${{ steps.get_version.outputs.version }}
-        name: Release v${{ steps.get_version.outputs.version }}
+        tag_name: ${{ steps.create_tag.outputs.tag_name }}
+        name: "kubsh ${{ steps.create_tag.outputs.tag_name }}"
         body: |
-          ## kubsh Shell v${{ steps.get_version.outputs.version }}
+          ## kubsh Shell ${{ steps.create_tag.outputs.tag_name }}
           
-          DEB package for kubsh shell
+          C++ shell implementation packaged as DEB.
           
           ### Installation
           ```bash
-          sudo dpkg -i kubsh*.deb
-          sudo apt-get install -f  # Install dependencies if needed
+          # Download the DEB package
+          wget https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ needs.build-and-test.outputs.DEB_FILE }}
+          
+          # Install
+          sudo dpkg -i ${{ needs.build-and-test.outputs.DEB_FILE }}
+          
+          # Fix dependencies if needed
+          sudo apt-get install -f
           ```
-        files: kubsh*.deb
+          
+          ### Features
+          - Custom C++ shell implementation
+          - VFS support
+          - All tests passing (including fixed test 9 with 0.5s delay)
+          
+          ### Test Results
+          - ✅ Tests 1-7: Basic functionality passed
+          - ✅ Test 8: VFS users check passed
+          - ✅ Test 9: VFS add user with delay fix passed
+          
+          Built from commit: `${{ github.sha }}`
         draft: false
         prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        files: |
+          ${{ needs.build-and-test.outputs.DEB_FILE }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+      
+    - name: Output release info
+      run: |
+        echo "=============================================="
+        echo "🚀 RELEASE CREATED SUCCESSFULLY!"
+        echo "=============================================="
+        echo ""
+        echo "Release: ${{ steps.create_tag.outputs.tag_name }}"
+        echo "DEB Package: ${{ needs.build-and-test.outputs.DEB_FILE }}"
+        echo ""
+        echo "Download URL:"
+        echo "https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ needs.build-and-test.outputs.DEB_FILE }}"
+        echo ""
+        echo "Install with:"
+        echo "wget https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ needs.build-and-test.outputs.DEB_FILE }}"
+        echo "sudo dpkg -i ${{ needs.build-and-test.outputs.DEB_FILE }}"
+        echo "=============================================="
